# agentic-support-copilot

./: .env.example  .gitignore  AGENTS.md  README.md  Taskfile.yml
.windsurf/rules/: api.md  general.md  web.md
.windsurf/workflows/: docs-update.md  finish-phase.md  implement-feature.md  implement-phase.md  phase-finish.md  plan-feature.md  plan-phase.md  update-docs.md
apps/api/: .env.example  README.md  Taskfile.yml  pyproject.toml
apps/api/docs/: workflow_diagram.md
apps/api/scripts/: clean_kb.py  clean_knowledge_base.py  setup_kb.py  setup_knowledge_base.py  test_kb.py  test_knowledge_base.py  test_workflow.py  visualize_workflow.py
apps/api/src/: config.py  logging_config.py  main.py  prompts.py
apps/api/src/agents/: classifier.py  guard.py  logger.py  retriever.py  workflow.py  writer.py
apps/api/src/models/: llm.py  state.py
apps/api/src/services/: database_setup.py  knowledge_base.py
apps/api/tests/: run_all_tests.py
apps/api/tests/integration/: test_api_endpoints.py  test_error_scenarios.py  test_integration.py
apps/api/tests/unit/: test_agents.py  test_api.py
apps/web/: Taskfile.yml  index.html  package-lock.json  package.json
docs/: ADR.md  CONTEXT.md  ROADMAP.md
docs/features/: phase00-feat000-azure-infra.md  phase00-feat001-infrastructure.md  phase00-feat002-knowledge-base.md  phase00-feat003-multi-agent-pipeline.md  phase00-feat004-api-backend.md  phase00-feat005-frontend-ui.md  phase00-feat006-testing-validation.md  phase01-feat000-agent-retries-and-timeouts.md  phase01-feat001-configurable-agent-prompts.md  phase01-feat003-structured-logging.md  (+1 more)
supabase/: Taskfile.yml  config.toml
(+16 files in other folders)
